--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,18 @@ server {
 
     location / {
         proxy_pass http://client;
+        rewrite /client/(.*) /$1 break;
+        proxy_pass_header Content-Type;
+    }
+
+    location /music_scores {
+        proxy_pass http://client;
+        proxy_pass_header Content-Type;
+    }
+
+    location /scores {
+        proxy_pass http://client;
+        proxy_pass_header Content-Type;
     }
 
     location /sockjs-node {
