--- a/client/package.json
+++ b/client/package.json
@@ -1,17 +1,37 @@
 {
-  "name": "client",
+  "name": "monkeymind-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.3",
+    "bootswatch": "^5.1.3",
+    "browserify-fs": "^1.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mdb-cli": "^3.7.3",
+    "mdb-react-ui-kit": "^2.2.0",
+    "path": "^0.12.7",
+    "pm2": "^5.2.0",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^17.0.1",
+    "react-froala-wysiwyg": "^4.0.8",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "axios": "0.18.0",
-    "react-router-dom": "4.3.1"
+    "react-xml-parser": "^1.1.8",
+    "sass": "^1.32.11",
+    "serve": "^13.0.2",
+    "styled-components": "^5.3.0",
+    "verovio": "^3.6.0",
+    "verovioscoreeditor": "^1.0.3",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
