--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   client:
+    user: 1000:1000
     stdin_open: true
     environment:
       - CHOKIDAR_USEPOLLING=true
