Working site with PDF and images.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,6 +25,11 @@ server {
         proxy_pass_header Content-Type;
     }
 
+    location /images {
+        proxy_pass http://client;
+        proxy_pass_header Content-Type;
+    }
+
     location /sockjs-node {
         proxy_pass http://client;
         proxy_http_version 1.1;
