--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "styled-components": "^5.3.0",
     "verovio": "^3.6.0",
     "verovioscoreeditor": "^1.0.3",
+    "vexflow": "^4.0.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.19"
   },
