--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,6 @@
-FROM node:14.14.0-alpine as builder
-WORKDIR /app
+#FROM node:14.14.0-alpine as builder
+FROM node:16 as builder
+#WORKDIR /app
 COPY ./package.json ./
 RUN npm i
 COPY . .
