--- a/client/package.json
+++ b/client/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "react-error-overlay": "^6.0.9",
+    "react-p5": "^1.3.30",
     "verovio-humdrum": "^3.10.0"
   }
 }
