--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,34 @@
 version: "3"
 services:
-  postgres:
-    image: "postgres:latest"
+#  postgres:
+#    image: "postgres:latest"
+#    environment:
+#      - POSTGRES_PASSWORD=postgres_password
+  mongo:
+    image: mongo-latest
+    restart: always
+    container_name: mongodb
+    ports:
+      27017:27017
     environment:
-      - POSTGRES_PASSWORD=postgres_password
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: m0ngoP455
+    volumes:
+      - mongodb-data:/data/db
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: m0ngoP455
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin123
+    depends_on:
+    - mongodb
   nginx:
     depends_on:
       - api
