--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "mdb-react-ui-kit": "^2.2.0",
     "path": "^0.12.7",
     "pm2": "^5.2.0",
+    "react": "^16.8.0",
+    "react-animation": "^1.2.2",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.8.0",
     "react-froala-wysiwyg": "^4.0.8",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
