--- a/client/package.json
+++ b/client/package.json
@@ -3,28 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.4",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.1",
     "bootswatch": "^5.1.3",
     "browserify-fs": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mdb-cli": "^3.7.3",
-    "mdb-react-ui-kit": "^2.2.0",
+    "mdb-react-ui-kit": "^4.2.0",
     "path": "^0.12.7",
     "pm2": "^5.2.0",
-    "react": "^16.8.0",
-    "react-animation": "^1.2.2",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^16.8.0",
-    "react-froala-wysiwyg": "^4.0.8",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.3",
     "sass": "^1.32.11",
     "serve": "^13.0.2",
@@ -62,7 +58,6 @@
   },
   "devDependencies": {
     "react-error-overlay": "^6.0.9",
-    "react-p5": "^1.3.30",
     "verovio-humdrum": "^3.10.0"
   }
 }
