--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,12 +15,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mdb-react-ui-kit": "^4.2.0",
+    "paper": "^0.12.15",
     "path": "^0.12.7",
     "pm2": "^5.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
+    "react-paper": "^0.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "4.0.3",
     "sass": "^1.32.11",
