--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-gallery": "^0.1.0",
     "react-icons": "^4.2.0",
     "react-paper": "^0.0.2",
     "react-router-dom": "^6.4.1",
