--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,5 +1,5 @@
 #FROM node:16-alpine as builder
-FROM node:16
+FROM node:18-alpine3.15
 WORKDIR /app
 RUN rm -rf /app/node_modules/*
 RUN mkdir -p /app/node_modules/.cache
@@ -9,7 +9,7 @@ COPY . .
 RUN chown -R node /app/
 RUN chmod 777 /app/node_modules
 RUN chmod 777 /app/node_modules/.cache
-RUN npm install
+RUN npm --legacy-peer-deps install
 #RUN yarn global add serve
 #RUN npm run build
 USER node
