--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,17 +1,26 @@
 #FROM node:16-alpine as builder
-FROM node:18-alpine3.15
+FROM node:18
 WORKDIR /app
-RUN rm -rf /app/node_modules/*
 RUN mkdir -p /app/node_modules/.cache
-COPY ./package.json ./
-RUN npm config set unsafe-perm true
-COPY . .
-RUN chown -R node /app/
+COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./package-lock.json ./
+#COPY --chown=node:node ./src ./
+#COPY --chown=node:node ./public ./
+#COPY --chown=node:node ./nginx ./
+COPY --chown=node:node . .
+RUN rm -rf /app/node_modules/*
 RUN chmod 777 /app/node_modules
 RUN chmod 777 /app/node_modules/.cache
-RUN npm --legacy-peer-deps install
+RUN npm install
+RUN npm install react-router-dom@6.4.1
+RUN npm install @emotion/react
+RUN npm install @emotion/styled
+RUN npm install @mui/material
+RUN npm config set unsafe-perm true
+#RUN chown -R node /app/
+USER node
 #RUN yarn global add serve
 #RUN npm run build
-USER node
-CMD ["npm", "run", "start"]
+#CMD ["npm", "start"]
+CMD ["sh", "-c", "npm start"]
 #CMD [ "serve", "-s", "build" ]
