--- a/client/package.json
+++ b/client/package.json
@@ -11,35 +11,34 @@
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
     "axios": "^0.21.4",
-    "bootstrap": "^5.2.1",
-    "bootswatch": "^5.1.3",
+    "bootstrap": "^5.3.8",
+    "bootswatch": "^5.3.8",
     "browserify-fs": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mdb-react-ui-kit": "^4.2.0",
+    "mdb-react-ui-kit": "^9.0.0",
     "paper": "^0.12.15",
     "path": "^0.12.7",
     "pm2": "^5.2.0",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1",
     "react-gallery": "^0.1.0",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "4.0.3",
-    "sass": "^1.32.11",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.93.2",
     "serve": "^13.0.2",
     "styled-components": "^5.3.0",
-    "verovio": "^3.10.0",
-    "verovioscoreeditor": "^1.0.3",
+    "verovio": "^5.6.0",
     "vexflow": "^4.0.3",
     "web-vitals": "^1.0.1",
     "xml2js": "^0.4.23",
     "yarn": "^1.22.19"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -62,7 +61,6 @@
     ]
   },
   "devDependencies": {
-    "react-error-overlay": "^6.0.9",
-    "verovio-humdrum": "^3.10.0"
+    "react-error-overlay": "^6.0.9"
   }
 }
