--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
+    "npm-check-updates": "^18.0.1",
     "react-xml-parser": "^1.1.8",
-    "verovio": "^3.10.0"
+    "verovio": "^5.6.0"
   }
 }
