--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,6 +1,14 @@
-FROM node:18-alpine3.15
+FROM node:24-bullseye
+
+#RUN mkdir -p /app
+RUN mkdir -p /app/node_modules/.cache
+RUN chown -R node:node /app
+
 WORKDIR /app
 COPY ./package.json ./
 RUN npm i
+RUN chown -R $USER:$(id -gn $USER) /root/.config
+RUN mkdir -p /app/node_modules/.cache
+RUN chmod -R 777 /app/node_modules/.cache
 COPY . .
 CMD ["npm", "run", "dev"]
